теперь хотя бы транзакции фиксируются верно